--- a/index.html
+++ b/index.html
@@ -63,9 +63,15 @@
     </style>
 </head>
 <body>
+<body>
     <div class="container">
+        <h2>Google Maps Marsruudi Generaator</h2>
+        <label for="aadressid">Sisesta aadressid (eralda komaga):</label>
+        <input type="text" id="aadressid" placeholder="Näiteks: Tallinn, Tartu, Pärnu">
+        <button onclick="looMarsruut()">Loo Marsruut</button>
+        <p id="mapsLink"></p>
+
         <h2>Proovitükkide arvutus</h2>
-        
         <label for="kuupaev">Kuupäev:</label>
         <input type="date" id="kuupaev">
         
