--- a/index.html
+++ b/index.html
@@ -1142,6 +1142,9 @@
             document.getElementById("istutamiseNupp").addEventListener('click', function() {
                 location.href = 'istutamine.html';
             });
+            document.getElementById("tagavaraNupp").addEventListener('click', function() {
+                location.href = 'tagavara.html';
+            });
             
             // Kontrollime, kas on pooleliolevaid töid
             const andmed = JSON.parse(localStorage.getItem("proovitukid")) || [];
