--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
     <div class="top-bar">
         <button class="top-button" id="proovitukkideNupp">Proovitükkide arvutus</button>
         <button class="top-button" id="istutamiseNupp">Istutamise kalkulaator</button>
+        <button class="top-button" id="tagavaraNupp">Tagavara kalkulaator</button>
     </div>
 
     <div class="container" id="mainContainer">
