--- a/istutamine.html
+++ b/istutamine.html
@@ -140,6 +140,7 @@
     <div class="top-bar">
         <button class="top-button" onclick="location.href='index.html'">Proovitükkide arvutus</button>
         <button class="top-button" onclick="location.href='istutamine.html'">Istutamise kalkulaator</button>
+        <button class="top-button" onclick="location.href='tagavara.html'">Tagavara kalkulaator</button>
     </div>
 
     <div class="container" id="mainContainer">
