--- a/tagavara.html
+++ b/tagavara.html
@@ -106,6 +106,12 @@
     <div class="container">
         <h1>Metsatagavara Kalkulaator</h1>
         
+    <div class="top-bar">
+        <button class="top-button" onclick="location.href='index.html'">Proovitükkide arvutus</button>
+        <button class="top-button" onclick="location.href='istutamine.html'">Istutamise kalkulaator</button>
+        <button class="top-button" onclick="location.href='tagavara.html'">Tagavara kalkulaator</button>
+    </div>
+        
         <div id="instructions">
             <h2>Kasutusjuhend</h2>
             <p>1. Vali puuliikide rühm ja täpsusta puuliik koodiga (nt 12KS88KU).</p>
