--- a/tagavara.html
+++ b/tagavara.html
@@ -114,7 +114,7 @@
         
         <div id="instructions">
             <h2>Kasutusjuhend</h2>
-            <p>1. Vali puuliikide rühm ja täpsusta puuliik koodiga (nt 12KS88KU).</p>
+            <p>1. Vali puuliikide rühm ja täpsusta puuliik koodiga (nt KU,KS,MA).</p>
             <p>2. Sisesta kõrgus (m) ja rinnaspindala (G, m²).</p>
             <p>3. Lisa proovitükk nuppu "Lisa proovitükk" abil.</p>
             <p>4. Kui oled lisanud kõik proovitükid, klõpsa nuppu "Arvuta koosseis".</p>
