--- a/istutamine.html
+++ b/istutamine.html
@@ -191,7 +191,16 @@
         <button onclick="laadiIstutamiseAndmed()">Laadi andmed alla</button>
         <button onclick="kustutaIstutamiseAndmed()">Kustuta andmed</button>
     </div>
-
+<script>
+    // Kontrolli ligipääsu ja rakenda blurred efekt kui vaja
+    document.addEventListener('DOMContentLoaded', function() {
+        if (!sessionStorage.getItem('hasAccess')) {
+            document.body.classList.add('blurred');
+            alert('Teil pole ligipääsu! Suuname teid ligipääsu lehele.');
+            window.location.href = 'access.html';
+        }
+    });
+</script>
     <script>
         // Muutujad tööaja jälgimiseks
         let startTime;
