--- a/tagavara.html
+++ b/tagavara.html
@@ -183,7 +183,16 @@
             </table>
         </div>
     </div>
-
+<script>
+    // Kontrolli ligipääsu ja rakenda blurred efekt kui vaja
+    document.addEventListener('DOMContentLoaded', function() {
+        if (!sessionStorage.getItem('hasAccess')) {
+            document.body.classList.add('blurred');
+            alert('Teil pole ligipääsu! Suuname teid ligipääsu lehele.');
+            window.location.href = 'access.html';
+        }
+    });
+</script>
     <script>
         // Standardtabeli andmed
         const standardTable = {
