--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<script>
+    // Kontrolli ligipääsu
+    if (!sessionStorage.getItem('hasAccess') {
+        window.location.href = 'access.html';
+    }
+</script>
 <!DOCTYPE html>
 <html lang="et">
 <head>
