--- a/admin.html
+++ b/admin.html
@@ -137,7 +137,7 @@
 
     <script>
         // Admin kood
-        const ADMIN_CODE = "893573(&=#nB8\"NsD(#\"=";
+        const ADMIN_CODE = "METSLUUAISTUTA1PUUTÄNANÜÜD";
         
         // Kontrolli admin ligipääsu
         function checkAdminAccess() {
