--- a/admin.html
+++ b/admin.html
@@ -137,7 +137,7 @@
 
     <script>
         // Admin kood
-        const ADMIN_CODE = "METSLUUAISTUTA1PUUTÄNANÜÜD";
+        const ADMIN_CODE = "Markus360";
         
         // Kontrolli admin ligipääsu
         function checkAdminAccess() {
