--- a/admin.html
+++ b/admin.html
@@ -210,7 +210,7 @@
 
     <script>
         // Admin kood
-        const ADMIN_CODE = "Markus360";
+        const ADMIN_CODE = "12345678910";
         let selectedDuration = 'lifetime'; // Vaikimisi valik
         let selectedDurationText = 'ELUAEGNE';
         
