--- a/tagavara.html
+++ b/tagavara.html
@@ -109,14 +109,14 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Metsatagavara Kalkulaator</h1>
-        
     <div class="top-bar">
         <button class="top-button" onclick="location.href='index.html'">Proovitükkide arvutus</button>
         <button class="top-button" onclick="location.href='istutamine.html'">Istutamise kalkulaator</button>
         <button class="top-button" onclick="location.href='tagavara.html'">Tagavara kalkulaator</button>
     </div>
+
+    <div class="container" id="mainContainer">
+        <h2>Tagavara Kalkulaator</h2>
         
         <div id="instructions">
             <h2>Kasutusjuhend</h2>
