--- a/koormamaht.html
+++ b/koormamaht.html
@@ -179,6 +179,13 @@
 <div class="container">
     <h1>🌲 Forvarderi koorma arvutus</h1>
     <div class="sub">Sisesta mõõdud meetrites</div>
+    
+        <div class="top-bar">
+        <button class="top-button" id="proovitukkideNupp">Proovitükkide arvutus</button>
+        <button class="top-button" id="istutamiseNupp">Istutamise kalkulaator</button>
+        <button class="top-button" id="tagavaraNupp">Tagavara kalkulaator</button>
+        <button class="top-button" id="koormamahtNupp">Koormamahu Kalkulaator</button>     
+    </div>
 
     <!-- Sisestusväljad vastavalt soovile: H1, L1 esimesel real; H2, L2 teisel real; M kolmandal real -->
     <div class="inputs-grid">
