--- a/istutamine.html
+++ b/istutamine.html
@@ -147,6 +147,7 @@
         <button class="top-button" onclick="location.href='index.html'">Proovitükkide arvutus</button>
         <button class="top-button" onclick="location.href='istutamine.html'">Istutamise kalkulaator</button>
         <button class="top-button" onclick="location.href='tagavara.html'">Tagavara kalkulaator</button>
+        <button class="top-button" onclick="location.href='koormamaht.html'">Koormamahu kalkulaator</button>
     </div>
 
     <div class="container" id="mainContainer">
