--- a/index.html
+++ b/index.html
@@ -210,10 +210,12 @@
     </div>
 
     <div class="top-bar">
-        <button class="top-button" id="proovitukkideNupp">Proovitükkide arvutus</button>
-        <button class="top-button" id="istutamiseNupp">Istutamise kalkulaator</button>
-        <button class="top-button" id="tagavaraNupp">Tagavara kalkulaator</button>
+        <button class="top-button" onclick="location.href='index.html'">Proovitükkide arvutus</button>
+        <button class="top-button" onclick="location.href='istutamine.html'">Istutamise kalkulaator</button>
+        <button class="top-button" onclick="location.href='tagavara.html'">Tagavara kalkulaator</button>
+        <button class="top-button" onclick="location.href='koormamaht.html'">Koormamahu kalkulaator</button>
     </div>
+
 
     <div class="container" id="mainContainer">
         <h2>Proovitükkide arvutus</h2>
