--- a/koormamaht.html
+++ b/koormamaht.html
@@ -180,12 +180,13 @@
     <h1>🌲 Forvarderi koorma arvutus</h1>
     <div class="sub">Sisesta mõõdud meetrites</div>
     
-        <div class="top-bar">
-        <button class="top-button" id="proovitukkideNupp">Proovitükkide arvutus</button>
-        <button class="top-button" id="istutamiseNupp">Istutamise kalkulaator</button>
-        <button class="top-button" id="tagavaraNupp">Tagavara kalkulaator</button>
-        <button class="top-button" id="koormamahtNupp">Koormamahu Kalkulaator</button>     
+    <div class="top-bar">
+        <button class="top-button" onclick="location.href='index.html'">Proovitükkide arvutus</button>
+        <button class="top-button" onclick="location.href='istutamine.html'">Istutamise kalkulaator</button>
+        <button class="top-button" onclick="location.href='tagavara.html'">Tagavara kalkulaator</button>
+        <button class="top-button" onclick="location.href='koormamaht.html'">Koormamahu kalkulaator</button>
     </div>
+
 
     <!-- Sisestusväljad vastavalt soovile: H1, L1 esimesel real; H2, L2 teisel real; M kolmandal real -->
     <div class="inputs-grid">
