--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
     </div>
 
     <div class="top-bar">
-        <button class="top-button" onclick="location.href='index.html'">Proovitükkide arvutus</button>
-        <button class="top-button" onclick="location.href='istutamine.html'">Istutamise kalkulaator</button>
-        <button class="top-button" onclick="location.href='tagavara.html'">Tagavara kalkulaator</button>
-        <button class="top-button" onclick="location.href='koormamaht.html'">Koormamahu kalkulaator</button>
+        <button class="top-button" onclick="location.href='indexNupp'">Proovitükkide arvutus</button>
+        <button class="top-button" onclick="location.href='istutamineNupp'">Istutamise kalkulaator</button>
+        <button class="top-button" onclick="location.href='tagavaraNupp'">Tagavara kalkulaator</button>
+        <button class="top-button" onclick="location.href='koormamahtNuppp'">Koormamahu kalkulaator</button>
     </div>
 
 
